# localpdb

./: .coveragerc  404.html  LICENSE  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: main.yml
api/: index.html
basics/: index.html
deepcoil_dataset/: index.html
docs/: basics.md  deepcoil_dataset.ipynb  ex1.md  ex2.md  hiv_protease.ipynb  index.md  lpdb.md  lpdb_chains.md  lpdb_entries.md  lpdb_search.md  overview.md  plugin_guide.md  plugins.md  setup.md  viral_ccs.ipynb
ex1/: index.html
ex2/: index.html
hiv_protease/: index.html
localpdb/: PDB.py  PDBDownloader.py  PDBVersioneer.py  __init__.py  localpdb_setup.py
localpdb/plugins/: Biounit.py  DSSP.py  ECOD.py  MasterChain.py  PDBChain.py  PDBClustering.py  PDBSeqresMapper.py  Plugin.py  PluginInstaller.py  PluginVersioneer.py  PrepPDBSeqresMapper.py  SIFTS.py  Socket.py  __init__.py
localpdb/plugins/config/: Biounit.yml  DSSP.yml  ECOD.yml  MasterChain.yml  PDBChain.yml  PDBClustering.yml  (+3 more)
localpdb/tests/: conftest.py  test_PDBDownloader.py  test_search_api.py
localpdb/utils/: config.py  errors.py  network.py  os.py  pdb.py  prot.py  remote_sources.yml  rest_api.py
lpdb/: index.html
lpdb_chains/: index.html
lpdb_entries/: index.html
lpdb_search/: index.html
overview/: index.html
plugin_guide/: index.html
plugins/: index.html
search/: search_index.json
setup/: index.html
stylesheets/: extra.css
tests/: test_config.yml  test_localpdb_core.py  test_localpdb_setup.py  test_localpdb_update.py  test_search_api.py
viral_ccs/: index.html
(+8 files in other folders)
